--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rechargle.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "16.8",
@@ -23,7 +25,8 @@
     "eject": "react-scripts eject",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "format": "prettier-eslint --eslint-config-path ./.eslintrc.json --write '**/*.{ts,tsx}'",
-    "prettier:fix": "prettier --write '**/*.{ts,tsx}'"
+    "prettier:fix": "prettier --write '**/*.{ts,tsx}'",
+    "build:staging": "env-cmd -f .env.staging npm run build"
   },
   "eslintConfig": {
     "extends": [
